force-app/main/default/objects/Installment__c/fields/Amounts__c.field-meta.xml
<CustomField>
    <fullName>Amounts__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>