force-app/main/default/objects/Installment__c/fields/of_Payment__c.field-meta.xml
<CustomField>
    <fullName>of_Payment__c</fullName>
    <label>% of Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>