force-app/main/default/objects/Installment__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>