force-app/main/default/objects/Installment__c/fields/Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plans__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plans</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>