force-app/main/default/objects/Installment__c/fields/Sales_Offer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Offer</label>
    <referenceTo>Sales_Offer__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>