force-app/main/default/objects/Installment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Booking__c</columns>
    <columns>of_Payment__c</columns>
    <columns>Amounts__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>